# Amungo

./: .gitignore  .gitignore.txt  CMakeLists.txt  CMakeLists.txt.txt  README.md  s23_game.sln  unique.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultFragmentShader.glsl.txt  DefaultVertexShader.glsl  DefaultVertexShader.glsl.txt
Game/: CMakeLists.txt  CMakeLists.txt.txt  Game.vcxproj  Game.vcxproj.filters  GameApp.cpp
Game/include/: Game.h
Game/src/: GameApp.cpp  GameApp.h  GameEvents.cpp  GameEvents.h  GameKeys.h  GameUtil.h  GameWindow.cpp  GameWindow.h  GameWindows.h  Image.cpp  Image.h  ImplImage.h  ImplRenderer.h  ImplShader.h  Renderer.cpp  Renderer.h  RendererTypers.h  RendererTypes.h  Shader.cpp  Shader.h  Unit.cpp  Unit.h  WindowImplementation.cpp  WindowImplementation.h  pch.h
Game/src/GLFWCode/: GLFWimplementation.cpp  GLFWimplementation.h
Game/src/OpenGLCode/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Game/x64/Debug/: Game.dll.recipe  Game.ilk  vc143.idb
Game/x64/Debug/Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glad/x64/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
glfw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_build/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_build/src/Debug/: glfw3dll.exp  glfw3dll.lib
glfw_build/src/glfw.dir/Debug/: glfw3.dll.recipe
glfw_build/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  (+2 more)
s23_game/: CMakeLists.txt  main.cpp  s23_game.vcxproj
s23_game/Debug/: vc143.idb
s23_game/Debug/s23_game.tlog/: s23_game.lastbuildstate
s23_game/x64/Debug/: s23_game.dll.recipe  s23_game.exe.recipe  s23_game.ilk  vc143.idb
s23_game/x64/Debug/s23_game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  s23_game.lastbuildstate
stbi/: stbi.vcxproj
stbi/x64/Debug/: vc143.idb
stbi/x64/Debug/stbi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
x64/Debug/: Game.exp  Game.lib  glad.idb  glad.lib  stbi.idb  stbi.lib
